assets/css/style.css
body {
    margin: 0;
    margin-bottom: 100px;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    line-height: 200%;
    font-size: 18 px;
    color: #777777;
    position: relative;
    min-height: 1200px;
}

.bg {
    background-image: url("../../assets/images/swirl_pattern.png");
    background-repeat: repeat-x repeat-y;
}

header {
    background: #ffffff;
    border-style: solid;
    border-width: 0px 0 4px 0;
    border-color: #cccccc;
    position: fixed;
    top: 0;
    width: 100%;
    margin-bottom: 100px;
    z-index: 500;
}

#heading {
    width: 960px;
    margin: auto;}

.flag {
    background: #4aaaa5;
    color: #ffffff;
    width: 305px;
    float: left;
}

.menu {
    float: right;
}

ul {
    list-style-type: none;
    margin: 0;
    padding-top: 30px;
}

li {
    display: inline;
    color: #cccccc
}

 .menu a:link, .menu a:visited {
     text-decoration: none;
     color: #777777;
 }

 .menu a:hover, .menu a:active {
    color: #4aaaa5;
 }

#link_1 {
    padding-right: 18px;
    border-style: solid;
    border-width: 0px 1px 0px 0px;
    border-color: #cccccc;
    text-decoration: none;
}

#link_2 {
    padding-right: 18px;
    padding-left: 15px;
    border-style: solid;
    border-width: 0px 1px 0px 0px;
    border-color: #cccccc;
}

#link_3 {
    padding-left: 15px;
}

h1, h2, h3 {
    font-family: Georgia, 'Times New Roman', Times, serif;
}

h1 {
    font-size: 28px;
    font-weight: bold;
    padding: 30px 30px;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

h2 {
    font-size: 28px;
    color: #4aaaa5;
    font-weight: bold;
    padding: 30px 30px;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

h3 {
    font-size: 18px;
    margin-top: 10px;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

h4 {
    font-size: 18px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    color: #ffffff;
    background-color: #4aaaa5;
    text-align: center;
    margin-top: 190px;
    padding: 10px 0;
    font-weight: bold;
}

.clear {
    clear: both;
}

#image_1, #image_2, #image_3, #image_4, #image_5 {
    width: 250px;
    height: 250px;
    background-color: #666666;
    float: left;
    background-image: url(https://picsum.photos/250/250);
    margin-bottom: 10px;
    margin-top: 15px;
}

#image_2, #image_4 {
    margin-left: 25px;
}

#image_1, #image_2 {
    margin-top: 20px;
}

#image_5 {
    margin-bottom: 30px
}

section {
    width: 960px;
    margin: auto;
    background: #ffffff;
    position: relative;
    top: 100px;
}

#about, #portfolio, #contact {
    margin-top: 50px;
    width: 960px;
}

.image_link a:link, .image_link a:visited {
    text-decoration: none;
    color: #ffffff;
}

.image_link a:hover, .image_link a:active {
    text-decoration: none;
    color: black;
    font-style: bold;
}

#headshot {
    width: 15%;
    height: 15%;
    float: left;
    vertical-align: text-top;
    padding-right: 20px;
    padding-bottom: 5px;
}

article {
    width: 94%;
    padding-bottom: 20px;
    padding-top: 20px;
    text-align: justify;
    border-style: solid;
    border-width: 4px 0px 0px 0px;
    border-color: #cccccc;
    margin: auto;
}

footer {
    border-style: solid;
    border-width: 5px 0 0 0;
    border-color: #4aaaa5;
    background: #666666;
    text-align: center;
    color: #ffffff;
    font-size: 8pt;
    padding-top: 30px;
    position: fixed;
    bottom: 0;
    width: 100%;
}

form, .image_link {
    margin: auto;
    width: 94%;
    border-style: solid;
    border-width: 4px 0px 0px 0px;
    border-color: #cccccc;
    
}

#name, #address, #message {
    width: 98.5%;
    margin: auto;
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 5px;

}

#message {
    height: 200px;
}

#button {
    background-color: #4aaaa5;
    color: #ffffff;
    font-weight: bold;
    border: none;
    border-radius: 3px;
    padding: 8px 13px;
    margin-bottom: 20px;
}

#button:hover {
    cursor: pointer;

}

@media screen and (max-width: 980px) {
    section, #about, #portfolio, #contact{
        width: 560px;
        padding-right: 10px;
        padding-left: 10px;
    }

   
}


@media screen and (max-width: 768px) {
    section, #about, #portfolio, #contact {
        width: 560px;
        padding-right: 10px;
        padding-left: 10px;
    }

    #heading {
        width: 560px;
    }

   
}

